
    The format of documentation in a particular file can be specified by the
    +:markup:+ directive.  If the +:markup:+ directive is in the first comment
    it is used as the default for the entire file.  For other comments it
    overrides the default markup format.

    The markup format can be set for rake tasks using RDoc::Task#markup

* Minor enhancements
  * HTML headings now have ids matching their titles.

      = Hello!

    Is rendered as

      <h1 id="label-Hello%21">Hello!</h1>

  * Labels for classes or methods can be linked-to by adding an <tt>@</tt>
    following the class or method reference.  For example,
    <tt>RDoc::Markup@Links</tt>

    See RDoc::Markup@Links for further details.
  * RDoc now looks for a <tt>markup: parser_name</tt> magic comment to choose
    alternate documentation formats.  The format comment must be in the first
    three lines of the file (to allow for a shebang or modeline).
  * RDoc makes an effort to syntax-highlight ruby code in verbatim sections.
    See RDoc::Markup@Paragraphs+and+Verbatim
  * Added RDoc::TopLevel#text? and RDoc::Parser::Text to indicate a
    parsed file contains no ruby constructs.
  * Added <tt>rdoc-label</tt> link scheme which allows bidirectional links.
    See RDoc::Markup for details.
  * Image paths at HTTPS URLs will now be turned into +<img>+ tags.  Pull
    Request #60 by James Mead
  * Added RDoc::Comment which encapsulates comment-handling functionality.
  * Added RDoc::Markup::PreProcess::post_process to allow arbitrary comment
    munging.
  * RDoc::RDoc::current is set for the entire RDoc run.
  * Split rdoc/markup/inline into individual files for its component classes.
  * Moved token stream HTML markup out of RDoc::AnyMethod#markup_code into
    RDoc::TokenStream::to_html
  * "Top" link in section headers is no longer inside the heading element.

* Bug fixes
  * Markup defined by RDoc::Markup#add_special inside a <tt><tt></tt> is no
    longer converted.