@@ -1,5 +1,9 @@
 Some file contains some things that might happen in RDoc, or might not
 
+=== 3.10
+
+* Trim path options to paths relative to the project dir
+
 === 3.11
 
 * Reload the RDoc tree from an RI store
@@ -16,6 +20,7 @@ Some file contains some things that might happen in RDoc, or might not
 
 API changes to RDoc
 
+* Remove global state
 * Remove RDoc::RDocError
 * RDoc::TopLevel#add_method should automatically create the appropriate method
   class rather than requiring one be passed in.
